# clean

clean_folder/: LICENCE  README.md  setup.cfg  setup.py
clean_folder/clean.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
clean_folder/clean_folder/: clean.py
