[metadata]
name = sort folder package
version = 1.0.0
author = Yuliia Bulana
author_email = bulanaja.julia@gmail.com
description = sorts files
long_description = sorts files and archives by categories: audio, video, images, documents, archives and other
url = https://github.com/bublik1990/clean
license = MIT license

[options]
packages = find:
